# ChangeLog for net-misc/neon
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-misc/neon/ChangeLog,v 1.145 2009/11/30 10:08:11 maekke Exp $

  30 Nov 2009; Markus Meier <maekke@gentoo.org> neon-0.29.0.ebuild:
  arm stable, bug #289419

  31 Oct 2009; Brent Baude <ranger@gentoo.org> neon-0.29.0.ebuild:
  Marking neon-0.29.0 ppc64 for bug 289419

  29 Oct 2009; Markus Meier <maekke@gentoo.org> neon-0.29.0.ebuild:
  amd64/x86 stable, bug #289419

  27 Oct 2009; Tobias Klausmann <klausman@gentoo.org> neon-0.29.0.ebuild:
  Stable on alpha, bug #289419

  24 Oct 2009; nixnut <nixnut@gentoo.org> neon-0.29.0.ebuild:
  ppc stable #289419

  23 Oct 2009; Jeroen Roovers <jer@gentoo.org> neon-0.29.0.ebuild:
  Stable for HPPA (bug #289419).

*neon-0.29.0 (14 Sep 2009)

  14 Sep 2009; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  -files/neon-0.28.4-SOCK_CLOEXEC.patch, +neon-0.29.0.ebuild:
  Version bump.

  28 Aug 2009; Petteri Räty <betelgeuse@gentoo.org> -neon-0.28.4.ebuild,
  -neon-0.28.5.ebuild:
  Remove old security vulnerable versions that also used built_with_use.

  27 Aug 2009; Alex Legler <a3li@gentoo.org> neon-0.28.6.ebuild:
  amd64 stable, security bug 281950

  25 Aug 2009; Raúl Porcel <armin76@gentoo.org> neon-0.28.6.ebuild:
  alpha/arm/ia64/s390/sh/sparc stable wrt #281950

  24 Aug 2009; Brent Baude <ranger@gentoo.org> neon-0.28.6.ebuild:
  Marking neon-0.28.6 ppc64 for bug 281950

  23 Aug 2009; nixnut <nixnut@gentoo.org> neon-0.28.6.ebuild:
  ppc stable #281950

  20 Aug 2009; Jeroen Roovers <jer@gentoo.org> neon-0.28.6.ebuild:
  Stable for HPPA (bug #281950).

  19 Aug 2009; Christian Faulhammer <fauli@gentoo.org> neon-0.28.6.ebuild:
  stable x86, security bug 281950

  19 Aug 2009; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  neon-0.28.6.ebuild:
  Pass --with-ca-bundle=/etc/ssl/certs/ca-certificates.crt option to econf
  with USE="gnutls" (bug #281196).
