@@ -1,6 +1,8 @@
 DIST neon-0.28.6.tar.gz 789193 RMD160 6c5ff58c9caf4691d46a8de174af6a701e551b7c SHA1 da7db2e3289cc3dbef7794e8cc3c56978a0d7157 SHA256 06ee8b1aa37a14a956a1158bf6b5a8c3388976d61c1dc3773a3ffe18ac8ecc0e
 DIST neon-0.29.0.tar.gz 879186 RMD160 338f6ff1589a01dee66cd31a72c45f3a57914ab8 SHA1 8d2e1609b2a3b13a6e68e58c26b1d708302e05ef SHA256 22878e0c6ce3f0092da3d97243b4d0b5756ee3fd4442e7c3f66161ba70e0a5a4
+DIST neon-0.29.1.tar.gz 880945 RMD160 1de3e3a49e944acef80d8dac68663eff0560b6bb SHA1 213b88c95d486de2742e979139dc169360d49ad2 SHA256 2b9c10f1f3fd440e0ebcb18de1b7d51c2a8042dc0f542022a2948006d149c8ee
 EBUILD neon-0.28.6.ebuild 2899 RMD160 c627f7f3fe219c64be8ceca9292b5d37a04145b9 SHA1 31b364d667ef394bcaf5dc0a594a5788900c89c8 SHA256 7c7f84671580e64ed90fe12e9fef9f9de7af0b0f7dac4f4b1d82e937e92b9dad
 EBUILD neon-0.29.0.ebuild 2858 RMD160 1307584d36e0407d74bd1d48e34546b059af6444 SHA1 d4144b68140f42c0b776cb0402ba391bac096f27 SHA256 c29526a355addbf53ed411937d861d9ca1811368ccfcb880d9b9320ee873e07d
-MISC ChangeLog 18808 RMD160 955f84e8bee6d569cbbf37d2f0ae9be2873af9dc SHA1 35b2a31516bd5a644f86596e90476700879281f2 SHA256 998a80f1840130a9139c6653b954fa2fb60d5b9711c2c911456139505705a7a2
+EBUILD neon-0.29.1.ebuild 2860 RMD160 fd0567126f0b4b479bd83e3e767b491c7d941d1e SHA1 cdff66d953699fdefb768966f75dfa53ee9a99dd SHA256 292de5dc4580b856c55c82cb24d38917a92f9fef9486242584c96a8bedd2e454
+MISC ChangeLog 18951 RMD160 4378789439f5a0a1ac4b682cc2a0c9e1b5d9ebbd SHA1 57b922d1e7c06a1d5538aa59d5769e67fef849fa SHA256 9996c3ed2cfab2db7b5c13dbf9b971f24ea7623dc20b2ce41d720ae1c94b108c
 MISC metadata.xml 1214 RMD160 a951a49e8f74d745ca8c156b770ae4bc3a531151 SHA1 c9e0e7d8ba72dfd4136a7a746bfc9aa5a289decd SHA256 f1017fa04c4b8bbf0982a1c71a560b933956db9f67467feac3ef78cec3a6e91c
